# maxobiz_roster_backend

./: .env-example  .gitignore  README.md  create_db.py  pyproject.toml
.github/workflows/: prevent-secrets.yml
common/: errors.py  exceptions.py  mixins.py  models.py  pagination.py  permissions.py  responses.py
core/: celery.py  settings.py  urls.py
org_structure/: apps.py  urls.py
org_structure/models/: __init__.py  department.py  group.py  organization.py
org_structure/serializers/: department.py  group.py  organization.py
org_structure/views/: department.py  group.py  organization.py
positions/: urls.py
positions/models/: __init__.py  designation.py  level.py
positions/serializers/: designation.py  level.py
positions/views/: __init__.py  designation.py  level.py
users/: admin.py  urls.py  validators.py
users/managers/: __init__.py  managers.py
users/models/: __init__.py  invites.py  social_account.py  user.py  user_profile.py
users/serializers/: accept_invite.py  auth.py  invitation.py  signup.py  user.py  user_profile.py
users/services/: auth_service.py  brute_force_service.py  forget_password.py  invitation.py  otp_service.py  social_auth_service.py  user_services.py
users/signals/: __init__.py  security_signal.py
users/tasks/: otp_task.py  security_task.py
users/views/: accept_invite.py  auth.py  forget_password.py  invitation.py  logout.py  signup.py  social_auth.py  user.py  user_profile.py
